# mvp

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yml  entrypoint.sh  note.txt  pyproject.toml  readme.md  requirements.txt  wait.sh
.github/workflows/: docker-image.yaml
plutus/: manage.py
plutus/accounts/: admin.py  forms.py  models.py  urls.py  views.py
plutus/accounts/templates/accounts/: change_password.html  login.html  profile.html  register.html
plutus/brands/: admin.py  models.py  urls.py  views.py
plutus/brands/templates/brands/: brand_feed.html  brand_list.html  search_brand.html
plutus/chat/: urls.py
plutus/notifications/: admin.py  models.py  urls.py  views.py
plutus/orders/: admin.py  forms.py  models.py  urls.py  views.py
plutus/orders/templates/orders/: order_detail.html  order_list.html
plutus/orders/templatetags/: orders_filter.py
plutus/plutus/: asgi.py  settings.py  urls.py  wsgi.py
plutus/promotions/: admin.py  forms.py  models.py  urls.py  views.py
plutus/promotions/templates/promotions/: category_list.html  create_promotion.html  datalist.html  my_promotion_list.html  promotion_detail.html  promotion_list.html  search_promotion.html
plutus/static/css/: chat.css  newStyle.css  style.css
plutus/static/js/: notifications.js
plutus/templates/: 400.html  403.html  404.html  base.html  carousel.html  cate_filters.html  chat.html  footer.html  header.html  notifications.html
